--- a/client/index.html
+++ b/client/index.html
@@ -2,9 +2,28 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>client</title>
+    <title>La Unidad Latina, Lambda Upsilon Lambda — Alpha Epsilon</title>
+    <meta
+      name="description"
+      content="The Alpha Epsilon Chapter of La Unidad Latina, Lambda Upsilon Lambda. Explore our mission, history, events, and community impact."
+    />
+    <meta property="og:title" content="La Unidad Latina, Lambda Upsilon Lambda — Alpha Epsilon" />
+    <meta
+      property="og:description"
+      content="The Alpha Epsilon Chapter of La Unidad Latina, Lambda Upsilon Lambda. Explore our mission, history, events, and community impact."
+    />
+    <meta property="og:image" content="/og-image.png" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://launidadlatina.org" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="La Unidad Latina, Lambda Upsilon Lambda — Alpha Epsilon" />
+    <meta
+      name="twitter:description"
+      content="The Alpha Epsilon Chapter of La Unidad Latina, Lambda Upsilon Lambda. Explore our mission, history, events, and community impact."
+    />
+    <meta name="twitter:image" content="/og-image.png" />
   </head>
   <body>
     <div id="root"></div>
